--- a/verificar.html
+++ b/verificar.html
@@ -15,8 +15,6 @@
       --red-main: #c41b2a;
       --gold: #FFD700;
       --green: #10b981;
-      --white: #ffffff;
-      --gray: #f8f9fa;
     }
 
     * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -40,7 +38,6 @@
       border-radius: 20px;
       overflow: hidden;
       box-shadow: 0 25px 60px rgba(0,0,0,0.6);
-      position: relative;
     }
 
     .header {
@@ -48,19 +45,7 @@
       padding: 30px 20px;
       text-align: center;
       position: relative;
-      overflow: hidden;
     }
-
-    .header::before {
-      content: '';
-      position: absolute;
-      top: -50%; left: -50%;
-      width: 200%; height: 200%;
-      background: repeating-linear-gradient(45deg, transparent, transparent 35px, rgba(255,255,255,.1) 35px, rgba(255,255,255,.1) 70px);
-      animation: shine 20s linear infinite;
-    }
-
-    @keyframes shine { 0% { transform: translateX(-100%) translateY(-100%); } 100% { transform: translateX(100%) translateY(100%); } }
 
     .header h1 {
       font-family: 'Bebas Neue', sans-serif;
@@ -68,16 +53,6 @@
       color: var(--gold);
       text-shadow: 0 4px 15px rgba(0,0,0,0.8);
       letter-spacing: 4px;
-      position: relative;
-      z-index: 2;
-    }
-
-    .header p {
-      font-size: 18px;
-      margin-top: 8px;
-      opacity: 0.9;
-      position: relative;
-      z-index: 2;
     }
 
     .content {
@@ -95,7 +70,6 @@
       align-items: center;
       justify-content: center;
       font-size: 60px;
-      font-weight: bold;
       color: white;
       box-shadow: 0 10px 30px rgba(16,185,129,0.5);
       animation: pulse 2s infinite;
@@ -107,13 +81,7 @@
       100% { box-shadow: 0 0 0 0 rgba(16,185,129,0); }
     }
 
-    .status {
-      font-family: 'Bebas Neue', sans-serif;
-      font-size: 38px;
-      color: var(--green);
-      margin: 15px 0;
-      text-shadow: 0 3px 10px rgba(0,0,0,0.3);
-    }
+    .status { font-family: 'Bebas Neue', sans-serif; font-size: 38px; color: var(--green); margin: 15px 0; }
 
     .info-card {
       background: #f8f9fa;
@@ -179,13 +147,6 @@
       padding: 40px;
       color: var(--gold);
     }
-
-    @media (max-width: 480px) {
-      .header h1 { font-size: 34px; }
-      .status { font-size: 32px; }
-      .info-card { padding: 20px; }
-      .info-row { font-size: 16px; }
-    }
   </style>
 </head>
 <body>
@@ -227,16 +188,21 @@
 
         let encontrado = false;
 
-        for (const [id, user] of Object.entries(users)) {
+        // Recorrer todos los usuarios
+        for (const [userId, user] of Object.entries(users)) {
           if (user.matricula !== matricula) continue;
 
+          // Si tiene compras guardadas
           if (user.purchases) {
             const compras = Object.values(user.purchases);
+            
+            // Buscar compra con el mismo código
             const compra = compras.find(p => p.codigo === codigo);
 
             if (compra) {
               const fecha = new Date(compra.fecha);
-              const fechaStr = fecha.toLocaleDateString('es-MX') + ' ' + fecha.toLocaleTimeString('es-MX', {hour: '2-digit', minute: '2-digit'});
+              const fechaStr = fecha.toLocaleDateString('es-MX') + ' ' + 
+                fecha.toLocaleTimeString('es-MX', {hour: '2-digit', minute: '2-digit'});
 
               resultDiv.innerHTML = `
                 <div class="seal">Check</div>
@@ -252,7 +218,7 @@
                     <span class="value highlight">${user.matricula}</span>
                   </div>
                   <div class="info-row">
-                    <span class="label">CÓDIGO</span>
+                    <span class="label">CÓDIGO TICKET</span>
                     <span class="value highlight">${compra.codigo}</span>
                   </div>
                   <div class="info-row">
@@ -264,7 +230,7 @@
                     <span class="value">$${parseInt(compra.total).toLocaleString()} MXN</span>
                   </div>
                   <div class="info-row">
-                    <span class="label">FECHA COMPRA</span>
+                    <span class="label">FECHA DE COMPRA</span>
                     <span class="value">${fechaStr}</span>
                   </div>
                 </div>
@@ -296,10 +262,12 @@
         }
 
       } catch (err) {
+        console.error("Error:", err);
         resultDiv.innerHTML = `<div class="error">Error de conexión<br>Intenta más tarde</div>`;
       }
     }
 
+    // PWA
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('service-worker.js').catch(() => {});
     }
