--- a/verificar.html
+++ b/verificar.html
@@ -7,7 +7,7 @@
   <link rel="manifest" href="manifest.json">
   <link rel="apple-touch-icon" href="icon-192.png">
   <meta name="theme-color" content="#c41b2a">
-  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Bebas+Neue&display=swap" rel="stylesheet">
   
   <style>
     :root {
@@ -15,6 +15,8 @@
       --red-main: #c41b2a;
       --gold: #FFD700;
       --green: #10b981;
+      --text: #ffffff;
+      --gray: #f8f9fa;
     }
 
     * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -38,6 +40,7 @@
       border-radius: 20px;
       overflow: hidden;
       box-shadow: 0 25px 60px rgba(0,0,0,0.6);
+      position: relative;
     }
 
     .header {
@@ -45,7 +48,19 @@
       padding: 30px 20px;
       text-align: center;
       position: relative;
+      overflow: hidden;
     }
+
+    .header::before {
+      content: '';
+      position: absolute;
+      top: -50%; left: -50%;
+      width: 200%; height: 200%;
+      background: repeating-linear-gradient(45deg, transparent, transparent 35px, rgba(255,255,255,.1) 35px, rgba(255,255,255,.1) 70px);
+      animation: shine 20s linear infinite;
+    }
+
+    @keyframes shine { 0% { transform: translateX(-100%) translateY(-100%); } 100% { transform: translateX(100%) translateY(100%); } }
 
     .header h1 {
       font-family: 'Bebas Neue', sans-serif;
@@ -53,6 +68,16 @@
       color: var(--gold);
       text-shadow: 0 4px 15px rgba(0,0,0,0.8);
       letter-spacing: 4px;
+      position: relative;
+      z-index: 2;
+    }
+
+    .header p {
+      font-size: 18px;
+      margin-top: 8px;
+      opacity: 0.9;
+      position: relative;
+      z-index: 2;
     }
 
     .content {
@@ -60,28 +85,7 @@
       text-align: center;
     }
 
-    .seal {
-      width: 120px;
-      height: 120px;
-      background: var(--green);
-      border-radius: 50%;
-      margin: 0 auto 20px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 60px;
-      color: white;
-      box-shadow: 0 10px 30px rgba(16,185,129,0.5);
-      animation: pulse 2s infinite;
-    }
-
-    @keyframes pulse {
-      0% { box-shadow: 0 0 0 0 rgba(16,185,129,0.7); }
-      70% { box-shadow: 0 0 0 20px rgba(16,185,129,0); }
-      100% { box-shadow: 0 0 0 0 rgba(16,185,129,0); }
-    }
-
-    .status { font-family: 'Bebas Neue', sans-serif; font-size: 38px; color: var(--green); margin: 15px 0; }
+    .status { font-family: 'Bebas Neue', sans-serif; font-size: 38px; color: var(--green); margin: 15px 0; text-shadow: 0 3px 10px rgba(0,0,0,0.3); }
 
     .info-card {
       background: #f8f9fa;
@@ -147,6 +151,23 @@
       padding: 40px;
       color: var(--gold);
     }
+
+    .no-purchase {
+      background: #fee2e2;
+      color: #991b1b;
+      padding: 30px;
+      border-radius: 20px;
+      font-size: 20px;
+      font-weight: 600;
+      border: 2px solid #ef4444;
+    }
+
+    @media (max-width: 480px) {
+      .header h1 { font-size: 34px; }
+      .status { font-size: 32px; }
+      .info-card { padding: 20px; }
+      .info-row { font-size: 16px; }
+    }
   </style>
 </head>
 <body>
@@ -187,19 +208,20 @@
         }
 
         let encontrado = false;
+        let hasPurchase = false;
 
-        // Recorrer todos los usuarios
         for (const [userId, user] of Object.entries(users)) {
           if (user.matricula !== matricula) continue;
 
-          // Si tiene compras guardadas
-          if (user.purchases) {
+          encontrado = true;
+
+          // Comprobar si tiene compras
+          if (user.purchases && Object.keys(user.purchases).length > 0) {
             const compras = Object.values(user.purchases);
-            
-            // Buscar compra con el mismo código
             const compra = compras.find(p => p.codigo === codigo);
 
             if (compra) {
+              hasPurchase = true;
               const fecha = new Date(compra.fecha);
               const fechaStr = fecha.toLocaleDateString('es-MX') + ' ' + 
                 fecha.toLocaleTimeString('es-MX', {hour: '2-digit', minute: '2-digit'});
@@ -245,29 +267,23 @@
                   El alumno puede recoger sus boletos físicos
                 </div>
               `;
-              encontrado = true;
               break;
             }
           }
         }
 
-        if (!encontrado) {
-          resultDiv.innerHTML = `
-            <div class="error">
-              TICKET NO VÁLIDO<br><br>
-              No se encontró registro de esta compra<br><br>
-              Contacta al comité organizador
-            </div>
-          `;
+        if (encontrado && !hasPurchase) {
+          resultDiv.innerHTML = `<div class="no-purchase">NO HAY COMPRAS REGISTRADAS<br><br>Esta persona está registrada pero no ha realizado compras de boletos.</div>`;
+        } else if (!encontrado) {
+          resultDiv.innerHTML = `<div class="error">PERSONA NO REGISTRADA<br><br>No se encontró ningún usuario con esta matrícula.</div>`;
         }
 
       } catch (err) {
-        console.error("Error:", err);
+        console.error(err);
         resultDiv.innerHTML = `<div class="error">Error de conexión<br>Intenta más tarde</div>`;
       }
     }
 
-    // PWA
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('service-worker.js').catch(() => {});
     }
